// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component renders for boys 1`] = `
"<div className=\\"root boy\\">
  <header className=\\"header\\">
    <div className=\\"back-arrow \\" onClick={[Function: onClick]}>
      &lt;
    </div>
    <div className=\\"logo-container\\">
      <div className=\\"logo\\">
        <BabyIcon />
      </div>
    </div>
  </header>
  <div className=\\"body\\">
    <Connect(FinalViewContainer) />
  </div>
</div>"
`;

exports[`Root Component renders for girls 1`] = `
"<div className=\\"root girl\\">
  <header className=\\"header\\">
    <div className=\\"back-arrow \\" onClick={[Function: onClick]}>
      &lt;
    </div>
    <div className=\\"logo-container\\">
      <div className=\\"logo\\">
        <BabyIcon />
      </div>
    </div>
  </header>
  <div className=\\"body\\">
    <Connect(FinalViewContainer) />
  </div>
</div>"
`;

exports[`Root Component renders with displayListPreview set to false 1`] = `
"<div className=\\"root girl\\">
  <header className=\\"header\\">
    <div className=\\"back-arrow \\" onClick={[Function: onClick]}>
      &lt;
    </div>
    <div className=\\"logo-container\\">
      <div className=\\"logo\\">
        <BabyIcon />
      </div>
    </div>
  </header>
  <div className=\\"body\\">
    <Connect(FinalViewContainer) />
  </div>
</div>"
`;

exports[`Root Component renders with isLoading set to true 1`] = `
"<div className=\\"root girl\\">
  <header className=\\"header\\">
    <div className=\\"back-arrow \\" onClick={[Function: onClick]}>
      &lt;
    </div>
    <div className=\\"logo-container\\">
      <div className=\\"logo\\">
        <BabyIcon />
      </div>
    </div>
  </header>
  <div className=\\"body\\">
    <Loader />
  </div>
</div>"
`;

exports[`Root Component renders with isSortingFinished set to false 1`] = `
"<div className=\\"root girl\\">
  <header className=\\"header\\">
    <div className=\\"back-arrow \\" onClick={[Function: onClick]}>
      &lt;
    </div>
    <div className=\\"logo-container\\">
      <div className=\\"logo\\">
        <BabyIcon />
      </div>
    </div>
  </header>
  <div className=\\"body\\">
    <Connect(ListPreviewContainer) />
  </div>
</div>"
`;
